# cogsci-2019-concept-learning

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
cogsci_2019_concept_learning/core/: acts.py  arch.py  baseline.py  maml.py  metric_learner.py  model.py  norm.py  ops.py  opt.py  update_rules.py
cogsci_2019_concept_learning/data/: __init__.py  dataset.py
cogsci_2019_concept_learning/data/human/: __init__.py
cogsci_2019_concept_learning/data/human/amturk_results/: README.md
cogsci_2019_concept_learning/data/human/amturk_results/exp_01/: dataset5_full_data.json  dataset_sample_5_spec_fixed.pkl
cogsci_2019_concept_learning/data/human/amturk_results/exp_02/: dataset11_full_data.json  dataset_sample_11_spec_fixed.pkl
cogsci_2019_concept_learning/data/human/amturk_results/exp_03/: dataset12_full_data.json  dataset_sample_12_spec_fixed.pkl
cogsci_2019_concept_learning/data/human/amturk_results/exp_04/: dataset13_full_data.json  dataset_sample_13_spec_fixed.pkl
cogsci_2019_concept_learning/data/human/amturk_results/exp_05/: dataset15_full_data.json  dataset_sample_15_spec_fixed.pkl
cogsci_2019_concept_learning/data/imagenet/: __init__.py  dog_synsets.txt  ilsvrc2012_synsets.pkl  out.txt  rosch_to_imagenet_map.pkl  splits.py  structure.py  synset_to_hyponyms_map.pkl  task.py  wang_basic_level_words.txt
cogsci_2019_concept_learning/utils/: parse_args.py  utils_gen.py  utils_np.py  utils_plt.py  utils_tf.py
cogsci_2019_concept_learning/utils/tests/: test_utils_tf.py
scripts/: main.py  run_human_comp.sh
