[metadata]
name = cogsci_2019_concept_learning
version = attr: cogsci_2019_concept_learning.__version__
author = Erin Grant
url = "https://github.com/eringrant/cogsci-2019-concept-learning"
description = 
    "Code for our 2019 CogSci paper "Learning deep taxonomic priors for concept learning from few positive examples.""
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = 
  cogsci_2019_concept_learning
python_requires = >=3.7,<=3.8
install_requires =
  ipython
  pre-commit
  numpy
  scipy
  seaborn
  tqdm
  nltk
  Pillow
  sklearn
  tensorflow==1.15
